--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -417,13 +417,20 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="GET A U" />
+
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/digital_result"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        app:srcCompat="@drawable/ocr_app_sample" />
 
                 </LinearLayout>
             </ScrollView>
