--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -428,8 +428,9 @@
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:scaleType="fitCenter"
                         app:srcCompat="@drawable/ocr_app_sample" />
 
                 </LinearLayout>
