--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -283,12 +283,12 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="75dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/digital_recognition"
@@ -296,18 +296,29 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="recognition"
-                    android:text="digital recognition" />
+                    android:text="digital recognition A" />
+
+                <Button
+                    android:id="@+id/digital_recognition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="recognitionB"
+                    android:text="digital recognition B" />
+
             </LinearLayout>
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="320dp">
+            android:layout_height="match_parent">
 
             <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fadeScrollbars="false"
+                android:scrollbars="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -319,7 +330,9 @@
                     <TextView
                         android:id="@+id/Elementary_Operations"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="100dp"
+                        android:layout_weight="1"
                         android:gravity="center"
                         android:text="Elementary Operations"
                         android:textSize="18sp" />
@@ -389,6 +402,7 @@
                         android:id="@+id/bt_matrix_determinant"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:onClick="Matrix_determinant"
                         android:text="A determinant" />
 
                     <TextView
@@ -409,6 +423,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:onClick="matrix_getL"
                             android:text="GET A L" />
 
                         <Button
@@ -416,13 +431,21 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:onClick="matrix_getU"
                             android:text="GET A U" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
                     </LinearLayout>
 
                     <TextView
                         android:id="@+id/digital_result"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView" />
 
